dnl #################################################################
dnl #
dnl # Copyright 2019 Marco Davids
dnl #
dnl #################################################################
#
# The above lines are comments that will end up in configer
# These lines won't
#
#####################################################################
AC_INIT([forfund], [1.0], [mdavids+forfund@forfun.net])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_MAINTAINER_MODE([enable])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
])
AC_OUTPUT
